--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,5 @@
 <% provide(:title, 'Home') %>
 <h1> Home Page </h1>
+<div class="row">
+	<strong> New user? <%=  link_to "Create An Account", signup_path %>
+</div>
